# pyBoltPack

./: .gitignore  README.md  entry_points.cfg  flow  setup.cfg
boltpack/: createapp.py  fileallsearch.py  main.py
tests/: createvenv.py  main.py  mkshellapp.sh  requirements.txt  run.sh  testapp.py  testargpars.py
tests/1testapp.app/Contents/: Info.plist
tests/1testapp.app/Contents/MacOS/: main.py
tests/1testappのコピー.app/Contents/: Info.plist
tests/1testappのコピー.app/Contents/MacOS/: core.sh
tests/temp/test.app/Contents/: Info.plist
tests/temp/test.app/Contents/MacOS/: core.py  core.sh
tests/temptemp/test.app/Contents/: Info.plist
tests/temptemp/test.app/Contents/MacOS/: core.sh  testapp.py
