[metadata]
name = BoltPack
#version = attr: boltpack.__version__
#version = attr: boltpack.__version__
url = https://github.com/NDSLib/pyBoltPack
author = hirossan4049
author_email = ndsl.googlegropus@gmail.com
#license_file = LICENSE
license = MIT
#description = wtl: Personal Python package
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires = requests
entry_points = file: entry_points.cfg
